--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 	<title>Blanchard</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/fonts.css">
-	<link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css"/>
-	<script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-regular.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-600.woff2" as="font" type="font/woff2" crossorigin>
@@ -36,24 +34,27 @@
 				</nav>
 			</div>
 		</div>
-		<nav class="mobile-nav container closed">
-			<ul class="mobile-menu-list ul-reset">
-				<li class="mobile-menu-list__item"><a class="mobile-menu-list__link link-reset" href="#">О нас</a></li>
-				<li class="mobile-menu-list__item"><a class="mobile-menu-list__link link-reset" href="#">Галерея</a></li>
-				<li class="mobile-menu-list__item"><a class="mobile-menu-list__link link-reset" href="#">Каталог</a></li>
-				<li class="mobile-menu-list__item"><a class="mobile-menu-list__link link-reset" href="#">События</a></li>
-				<li class="mobile-menu-list__item"><a class="mobile-menu-list__link link-reset" href="#">Издания</a></li>
-				<li class="mobile-menu-list__item"><a class="mobile-menu-list__link link-reset" href="#">Проекты</a></li>
-				<li class="mobile-menu-list__item"><a class="mobile-menu-list__link link-reset" href="#">Контакты</a></li>
-			</ul>
+		<nav class="mobile-nav hidden closed">
+			<div class="container">
+				<ul class="mobile-menu-list ul-reset">
+					<li class="mobile-menu-list__item"><a class="mobile-menu-list__link link-reset" href="#">О нас</a></li>
+					<li class="mobile-menu-list__item"><a class="mobile-menu-list__link link-reset" href="#">Галерея</a></li>
+					<li class="mobile-menu-list__item"><a class="mobile-menu-list__link link-reset" href="#">Каталог</a></li>
+					<li class="mobile-menu-list__item"><a class="mobile-menu-list__link link-reset" href="#">События</a></li>
+					<li class="mobile-menu-list__item"><a class="mobile-menu-list__link link-reset" href="#">Издания</a></li>
+					<li class="mobile-menu-list__item"><a class="mobile-menu-list__link link-reset" href="#">Проекты</a></li>
+					<li class="mobile-menu-list__item"><a class="mobile-menu-list__link link-reset" href="#">Контакты</a></li>
+				</ul>
+			</div>
+
 		</nav>
 		<div class="lower-header">
 			<div class="container">
 				<ul class="styles-list ul-reset">
 					<li class="styles-list__item">
 						<a class="styles-list__link link-reset selectable" href="#">Реализм</a>
-						<div class="artist-dropdown closed">
-							<ul class="artist-dropdown__list ul-reset scroll-block" data-simplebar>
+						<div class="artist-dropdown hidden closed">
+							<ul class="artist-dropdown__list ul-reset">
 								<li class="artist-dropdown__item">Мане</li>
 								<li class="artist-dropdown__item">Дега</li>
 								<li class="artist-dropdown__item">Репин</li>
@@ -65,6 +66,13 @@
 					</li>
 					<li class="styles-list__item">
 						<a class="styles-list__link link-reset selectable" href="#">Импрессионизм</a>
+						<div class="artist-dropdown hidden closed">
+							<ul class="artist-dropdown__list ul-reset">
+								<li class="artist-dropdown__item">Моне</li>
+								<li class="artist-dropdown__item">Моризо</li>
+								<li class="artist-dropdown__item">Писсарро</li>
+								<li class="artist-dropdown__item">Ренуар</li>
+							</ul>
 					</li>
 					<li class="styles-list__item">
 						<a class="styles-list__link link-reset selectable" href="#">Постимпрессионизм</a>
