--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</nav>
 			</div>
 		</div>
-		<nav class="mobile-nav hidden closed">
+		<nav class="mobile-nav closed">
 			<div class="container">
 				<ul class="mobile-menu-list ul-reset">
 					<li class="mobile-menu-list__item"><a class="mobile-menu-list__link link-reset" href="#">О нас</a></li>
@@ -92,6 +92,7 @@
 		</div>
 	</header>
 	<script src="js/jquery-3.5.1.min.js"></script>
+	<script src="/node_modules/focus-visible/dist/focus-visible.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
