--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@
 			</div>
 		</div>
 	</header>
+
+	<main>
+		<section class="info">
+			<div class="container">
+				<h1 class="tagline text-block-reset">Прикоснитесь к&nbsp;прекрасному</h1>
+				<p class="subtext text-block-reset">Мы вынуждены отталкиваться от того, что реализация намеченных плановых заданий создаёт предпосылки для новых предложений.</p>
+				<button class="subscribe-btn link-reset">Подписаться на рассылку</button>
+			</div>
+		</section>
+	</main>
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="/node_modules/focus-visible/dist/focus-visible.min.js"></script>
 	<script src="js/script.js"></script>
