--- a/index.html
+++ b/index.html
@@ -63,15 +63,40 @@
 								<li class="artist-dropdown__item">Писсарро</li>
 								<li class="artist-dropdown__item">Ренуар</li>
 							</ul>
+						</div>
 					</li>
 					<li class="styles-list__item">
 						<a class="styles-list__link link-reset selectable" href="#">Постимпрессионизм</a>
+						<div class="artist-dropdown hidden closed">
+							<ul class="artist-dropdown__list ul-reset">
+								<li class="artist-dropdown__item">Сезан</li>
+								<li class="artist-dropdown__item">Гоген</li>
+								<li class="artist-dropdown__item">Матисс</li>
+								<li class="artist-dropdown__item">Ван Гог</li>
+							</ul>
+						</div>
 					</li>
 					<li class="styles-list__item">
 						<a class="styles-list__link link-reset selectable" href="#">Авангард</a>
+						<div class="artist-dropdown hidden closed">
+							<ul class="artist-dropdown__list ul-reset">
+								<li class="artist-dropdown__item">Кандинский</li>
+								<li class="artist-dropdown__item">Ларионов</li>
+								<li class="artist-dropdown__item">Малевич</li>
+								<li class="artist-dropdown__item">Пиросмани</li>
+							</ul>
+						</div>
 					</li>
 					<li class="styles-list__item">
 						<a class="styles-list__link link-reset selectable" href="#">Футуризм</a>
+						<div class="artist-dropdown hidden closed">
+							<ul class="artist-dropdown__list ul-reset">
+								<li class="artist-dropdown__item">Боччони</li>
+								<li class="artist-dropdown__item">Карра</li>
+								<li class="artist-dropdown__item">Джакомо</li>
+								<li class="artist-dropdown__item">Северини</li>
+							</ul>
+						</div>
 					</li>
 				</ul>
 				<form class="search-form">
@@ -108,6 +133,17 @@
 						</div>
 					</div>
 				</div>
+			</div>
+		</section>
+
+		<section class="about">
+			<div class="container">
+				<h2 class="heading text-block-reset">О нас</h2>
+				<p class="article text-block-reset">Ясность нашей позиции очевидна: семантический разбор внешних противодействий однозначно определяет каждого участника как способного принимать собственные решения касаемо
+					распределения внутренних резервов и ресурсов. Не следует, однако, забывать, что высококачественный прототип будущего проекта влечет за собой процесс внедрения и модернизации
+					модели развития. Повседневная практика показывает, что высокое качество позиционных исследований создаёт необходимость включения в производственный план целого ряда
+					внеочередных мероприятий с учётом комплекса распределения внутренних резервов и ресурсов. В рамках спецификации современных стандартов, действия представителей оппозиции
+					набирают популярность среди определенных слоев населения, а значит, должны быть разоблачены.</p>
 			</div>
 		</section>
 	</main>
