--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
 	<title>Blanchard</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/fonts.css">
-	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-regular.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-600.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-700.woff2" as="font" type="font/woff2" crossorigin>
-	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
 <body class="body">
 	<header class="header">
 		<div class="upper-header">
-			<div class="container">
+			<div class="container header__container">
 				<button class="burger link-reset" aria-label="Открыть меню">
 					<span class="burger__element"></span>
 				</button>
@@ -39,12 +37,12 @@
 
 		</nav>
 		<div class="lower-header">
-			<div class="container">
+			<div class="container header__container">
 				<ul class="styles-list ul-reset">
 					<li class="styles-list__item">
 						<a class="styles-list__link link-reset selectable" href="#">Реализм</a>
 						<div class="artist-dropdown hidden closed">
-							<ul class="artist-dropdown__list ul-reset">
+							<ul class="artist-dropdown__list ul-reset scrollbar">
 								<li class="artist-dropdown__item">Мане</li>
 								<li class="artist-dropdown__item">Дега</li>
 								<li class="artist-dropdown__item">Репин</li>
@@ -109,37 +107,17 @@
 
 	<main>
 		<section class="info">
-			<div class="swiper-container">
-				<div class="swiper-wrapper">
-					<div class="swiper-slide swiper-slide_1">
-						<div class="swiper-slide__container">
-							<h2 class="tagline text-block-reset">Прикоснитесь к&nbsp;прекрасному</h2>
-							<p class="subtext text-block-reset">Мы вынуждены отталкиваться от того, что реализация намеченных плановых заданий создаёт предпосылки для новых предложений.</p>
-							<button class="subscribe-btn link-reset">Подписаться на рассылку</button>
-						</div>
-					</div>
-					<div class="swiper-slide swiper-slide_2">
-						<div class="swiper-slide__container">
-							<h2 class="tagline text-block-reset">Прикоснитесь к&nbsp;прекрасному</h2>
-							<p class="subtext text-block-reset">Мы вынуждены отталкиваться от того, что реализация намеченных плановых заданий создаёт предпосылки для новых предложений.</p>
-							<button class="subscribe-btn link-reset">Подписаться на рассылку</button>
-						</div>
-					</div>
-					<div class="swiper-slide swiper-slide_3">
-						<div class="swiper-slide__container">
-							<h2 class="tagline text-block-reset">Прикоснитесь к&nbsp;прекрасному</h2>
-							<p class="subtext text-block-reset">Мы вынуждены отталкиваться от того, что реализация намеченных плановых заданий создаёт предпосылки для новых предложений.</p>
-							<button class="subscribe-btn link-reset">Подписаться на рассылку</button>
-						</div>
-					</div>
-				</div>
+			<div class="container">
+				<h2 class="tagline text-block-reset">Прикоснитесь к&nbsp;прекрасному</h2>
+				<p class="subtext text-block-reset">Мы вынуждены отталкиваться от того, что реализация намеченных плановых заданий создаёт предпосылки для новых предложений.</p>
+				<button class="subscribe-btn link-reset">Подписаться на рассылку</button>
 			</div>
 		</section>
 
 		<section class="about">
 			<div class="container">
-				<h2 class="heading text-block-reset">О нас</h2>
-				<p class="article text-block-reset">Ясность нашей позиции очевидна: семантический разбор внешних противодействий однозначно определяет каждого участника как способного принимать собственные решения касаемо
+				<h2 class="heading about__heading text-block-reset">О нас</h2>
+				<p class="paragraph about__paragraph text-block-reset">Ясность нашей позиции очевидна: семантический разбор внешних противодействий однозначно определяет каждого участника как способного принимать собственные решения касаемо
 					распределения внутренних резервов и ресурсов. Не следует, однако, забывать, что высококачественный прототип будущего проекта влечет за собой процесс внедрения и модернизации
 					модели развития. Повседневная практика показывает, что высокое качество позиционных исследований создаёт необходимость включения в производственный план целого ряда
 					внеочередных мероприятий с учётом комплекса распределения внутренних резервов и ресурсов. В рамках спецификации современных стандартов, действия представителей оппозиции
