--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		</section>
 
 		<section class="gallery">
-			<div class="container">
+			<div class="container gallery__container">
 				<h2 class="heading gallery__heading text-block-reset">Галерея</h2>
 				<form class="gallery-form">
 					<legend class="gallery-form__heading">Фильтровать по:</legend>
@@ -148,20 +148,35 @@
 				</form>
 				<div class="swiper-container">
 					<div class="swiper-wrapper">
-						<div class="swiper-slide">
+						<div class="swiper-slide gallery__slide">
 							<img class="gallery__img" src="img/gallery/1.jpg" alt="Картина">
 						</div>
-						<div class="swiper-slide">
+						<div class="swiper-slide gallery__slide">
 							<img class="gallery__img" src="img/gallery/2.jpg" alt="Картина">
 						</div>
-						<div class="swiper-slide">
+						<div class="swiper-slide gallery__slide">
 							<img class="gallery__img" src="img/gallery/3.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/4.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/5.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/6.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/7.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/8.jpg" alt="Картина">
 						</div>
 					</div>
 					<div class="pagination gallery__pagination">
-						<div class="swiper-button-prev pagination__button"></div>
+						<div class="swiper-button-prev pagination__button selectable link-reset"></div>
 						<span class="pagination__index">1 / 18</span>
-						<div class="swiper-button-next pagination__button"></div>
+						<div class="swiper-button-next pagination__button selectable link-reset"></div>
 					</div>
 				</div>
 				<p class="paragraph gallery__paragraph text-block-reset">
