--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
 	<title>Blanchard</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/fonts.css">
-	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+	<link rel="stylesheet" href="css/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/selectric.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-regular.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-600.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-700.woff2" as="font" type="font/woff2" crossorigin>
-	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-regular.woff2" as="font" type="font/woff2">
+	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-600.woff2" as="font" type="font/woff2">
+	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-700.woff2" as="font" type="font/woff2">
+	<script src="js/swiper-bundle.min.js"></script>
 </head>
 <body class="body">
 	<header class="header">
+		<h1 class="visually-hidden">Blanchard. Художественная галерея</h1>
 		<div class="upper-header">
 			<div class="container header__container">
 				<button class="burger link-reset" aria-label="Открыть меню">
@@ -44,6 +45,7 @@
 				<ul class="styles-list ul-reset">
 					<li class="styles-list__item">
 						<a class="styles-list__link link-reset selectable" href="#">Реализм</a>
+						<button class="styles-list__button link-reset selectable" href="#"></button>
 						<div class="artist-dropdown hidden closed">
 							<ul class="artist-dropdown__list ul-reset scrollbar">
 								<li class="artist-dropdown__item">Мане</li>
@@ -57,6 +59,7 @@
 					</li>
 					<li class="styles-list__item">
 						<a class="styles-list__link link-reset selectable" href="#">Импрессионизм</a>
+						<button class="styles-list__button link-reset selectable" href="#"></button>
 						<div class="artist-dropdown hidden closed">
 							<ul class="artist-dropdown__list ul-reset">
 								<li class="artist-dropdown__item">Моне</li>
@@ -68,6 +71,7 @@
 					</li>
 					<li class="styles-list__item">
 						<a class="styles-list__link link-reset selectable" href="#">Постимпрессионизм</a>
+						<button class="styles-list__button link-reset selectable" href="#"></button>
 						<div class="artist-dropdown hidden closed">
 							<ul class="artist-dropdown__list ul-reset">
 								<li class="artist-dropdown__item">Сезан</li>
@@ -79,6 +83,7 @@
 					</li>
 					<li class="styles-list__item">
 						<a class="styles-list__link link-reset selectable" href="#">Авангард</a>
+						<button class="styles-list__button link-reset selectable" href="#"></button>
 						<div class="artist-dropdown hidden closed">
 							<ul class="artist-dropdown__list ul-reset">
 								<li class="artist-dropdown__item">Кандинский</li>
@@ -90,6 +95,7 @@
 					</li>
 					<li class="styles-list__item">
 						<a class="styles-list__link link-reset selectable" href="#">Футуризм</a>
+						<button class="styles-list__button link-reset selectable" href="#"></button>
 						<div class="artist-dropdown hidden closed">
 							<ul class="artist-dropdown__list ul-reset">
 								<li class="artist-dropdown__item">Боччони</li>
@@ -175,7 +181,7 @@
 					</div>
 					<div class="pagination gallery__pagination">
 						<div class="swiper-button-prev pagination__button selectable link-reset"></div>
-						<span class="pagination__index">1 / 18</span>
+						<div class="swiper-pagination"></div>
 						<div class="swiper-button-next pagination__button selectable link-reset"></div>
 					</div>
 				</div>
@@ -187,7 +193,7 @@
 		</section>
 	</main>
 	<script src="js/jquery-3.5.1.min.js"></script>
-	<script src="/node_modules/focus-visible/dist/focus-visible.min.js"></script>
+	<script src="js/focus-visible.min.js"></script>
 	<script src="js/jquery.selectric.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
