--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
 			</div>
 		</div>
 
-		</nav>
 		<div class="lower-header">
 			<div class="container header__container">
 				<ul class="styles-list ul-reset">
 					<li class="styles-list__item">
 						<a class="styles-list__link link-reset selectable" href="#">Реализм</a>
-						<button class="styles-list__button link-reset selectable" href="#"></button>
+						<button class="styles-list__button link-reset selectable"></button>
 						<div class="artist-dropdown hidden closed">
 							<ul class="artist-dropdown__list ul-reset scrollbar">
 								<li class="artist-dropdown__item">Мане</li>
@@ -63,7 +62,7 @@
 					</li>
 					<li class="styles-list__item">
 						<a class="styles-list__link link-reset selectable" href="#">Импрессионизм</a>
-						<button class="styles-list__button link-reset selectable" href="#"></button>
+						<button class="styles-list__button link-reset selectable"></button>
 						<div class="artist-dropdown hidden closed">
 							<ul class="artist-dropdown__list ul-reset">
 								<li class="artist-dropdown__item">Моне</li>
@@ -75,7 +74,7 @@
 					</li>
 					<li class="styles-list__item">
 						<a class="styles-list__link link-reset selectable" href="#">Постимпрессионизм</a>
-						<button class="styles-list__button link-reset selectable" href="#"></button>
+						<button class="styles-list__button link-reset selectable"></button>
 						<div class="artist-dropdown hidden closed">
 							<ul class="artist-dropdown__list ul-reset">
 								<li class="artist-dropdown__item">Сезан</li>
@@ -87,7 +86,7 @@
 					</li>
 					<li class="styles-list__item">
 						<a class="styles-list__link link-reset selectable" href="#">Авангард</a>
-						<button class="styles-list__button link-reset selectable" href="#"></button>
+						<button class="styles-list__button link-reset selectable"></button>
 						<div class="artist-dropdown hidden closed">
 							<ul class="artist-dropdown__list ul-reset">
 								<li class="artist-dropdown__item">Кандинский</li>
@@ -99,7 +98,7 @@
 					</li>
 					<li class="styles-list__item">
 						<a class="styles-list__link link-reset selectable" href="#">Футуризм</a>
-						<button class="styles-list__button link-reset selectable" href="#"></button>
+						<button class="styles-list__button link-reset selectable"></button>
 						<div class="artist-dropdown hidden closed">
 							<ul class="artist-dropdown__list ul-reset">
 								<li class="artist-dropdown__item">Боччони</li>
@@ -142,7 +141,7 @@
 			<div class="container gallery__container">
 				<h2 class="heading gallery__heading text-block-reset">Галерея</h2>
 				<form class="gallery-form">
-					<legend class="gallery-form__heading">Фильтровать по:</legend>
+					<h3 class="gallery-form__heading text-block-reset">Фильтровать по:</h3>
 					<select class="selectric selectric_top" name="author">
 						<option disabled selected>Автор</option>
 						<option value="malevich">Малевич</option>
@@ -181,6 +180,72 @@
 						</div>
 						<div class="swiper-slide gallery__slide">
 							<img class="gallery__img" src="img/gallery/8.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/9.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/10.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/11.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/12.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/13.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/14.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/15.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/16.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/17.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/18.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/19.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/20.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/21.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/22.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/23.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/24.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/25.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/26.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/27.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/28.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/29.jpg" alt="Картина">
+						</div>
+						<div class="swiper-slide gallery__slide">
+							<img class="gallery__img" src="img/gallery/30.jpg" alt="Картина">
 						</div>
 					</div>
 					<div class="pagination gallery__pagination">
