--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/selectric.css">
+	<!-- <link rel="stylesheet" href="js/jquery-ui-1.12.1.custom/jquery-ui.min.css"> -->
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="css/info.css">
 	<link rel="stylesheet" href="css/about.css">
 	<link rel="stylesheet" href="css/gallery.css">
+	<link rel="stylesheet" href="css/catalog.css">
 	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-regular.woff2" as="font" type="font/woff2">
 	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-600.woff2" as="font" type="font/woff2">
 	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-700.woff2" as="font" type="font/woff2">
@@ -260,10 +262,113 @@
 				</p>
 			</div>
 		</section>
+
+		<section class="catalog">
+			<div class="container">
+				<h2 class="heading catalog__heading text-block-reset">Каталог</h2>
+				<ul class="flags ul-reset">
+					<li class="flags__item"><button class="flags__button flags__button_france link-reset" aria-label="Франция"></button></li>
+					<li class="flags__item"><button class="flags__button flags__button_germany link-reset" aria-label="Германия"></button></li>
+					<li class="flags__item"><button class="flags__button flags__button_italy link-reset" aria-label="Италия"></button></li>
+					<li class="flags__item"><button class="flags__button flags__button_russia link-reset" aria-label="Россия"></button></li>
+					<li class="flags__item"><button class="flags__button flags__button_belgium link-reset" aria-label="Бельгия"></button></li>
+				</ul>
+				<div class="artists-catalog" id="accordion">
+					<h3 class="artists-catalog__heading">C 1400 по 1499 гг.</h3>
+					<div>
+						<ul class="artists-catalog__list ul-reset">
+							<li class="artists-catalog__item">Бенедетто ди Биндо</li>
+							<li class="artists-catalog__item">Бергоньоне, Амброджо</li>
+							<li class="artists-catalog__item">Биссоло, Франческо</li>
+							<li class="artists-catalog__item">Больтраффио, Джованни</li>
+							<li class="artists-catalog__item">Бонсиньори, Франческо</li>
+							<li class="artists-catalog__item">Боттичини, Рафаэлло</li>
+							<li class="artists-catalog__item">Брамантино</li>
+							<li class="artists-catalog__item">Бреа, Людовико</li>
+							<li class="artists-catalog__item">Бьяджо д’Антонио Туччи</li>
+							<li class="artists-catalog__item">Веккьетта</li>
+							<li class="artists-catalog__item">Андреа Верроккьо</li>
+							<li class="artists-catalog__item">Доменико Гирландайо</li>
+							<li class="artists-catalog__item">Беноццо Гоццоли</li>
+							<li class="artists-catalog__item">Граначчи, Франческо</li>
+							<li class="artists-catalog__item">Грегорио ди Чекко</li>
+							<li class="artists-catalog__item">Джованни да Удине</li>
+							<li class="artists-catalog__item">Джованни ди Паоло</li>
+							<li class="artists-catalog__item">Джорджоне</li>
+							<li class="artists-catalog__item">Парентино, Бернардо</li>
+							<li class="artists-catalog__item">Пезеллино</li>
+							<li class="artists-catalog__item">Пьетро Перуджино</li>
+							<li class="artists-catalog__item">Перуцци, Бальдассаре</li>
+							<li class="artists-catalog__item">Пизанелло</li>
+							<li class="artists-catalog__item">Пинтуриккьо</li>
+						</ul>
+					</div>
+					<h3>C 1500 по 1599 гг.</h3>
+					<div>
+						<ul>
+							<li>Бенедетто ди Биндо</li>
+							<li>Бергоньоне, Амброджо</li>
+							<li>Биссоло, Франческо</li>
+							<li>Больтраффио, Джованни</li>
+							<li>Бонсиньори, Франческо</li>
+							<li>Боттичини, Рафаэлло</li>
+							<li>Брамантино</li>
+							<li>Бреа, Людовико</li>
+							<li>Бьяджо д’Антонио Туччи</li>
+							<li>Веккьетта</li>
+							<li>Андреа Верроккьо</li>
+							<li>Доменико Гирландайо</li>
+							<li>Беноццо Гоццоли</li>
+							<li>Граначчи, Франческо</li>
+							<li>Грегорио ди Чекко</li>
+							<li>Джованни да Удине</li>
+							<li>Джованни ди Паоло</li>
+							<li>Джорджоне</li>
+							<li>Парентино, Бернардо</li>
+							<li>Пезеллино</li>
+							<li>Пьетро Перуджино</li>
+							<li>Перуцци, Бальдассаре</li>
+							<li>Пизанелло</li>
+							<li>Пинтуриккьо</li>
+						</ul>
+					</div>
+					<h3>C 1600 по 1699 гг.</h3>
+					<div>
+						<ul>
+							<li>Бенедетто ди Биндо</li>
+							<li>Бергоньоне, Амброджо</li>
+							<li>Биссоло, Франческо</li>
+							<li>Больтраффио, Джованни</li>
+							<li>Бонсиньори, Франческо</li>
+							<li>Боттичини, Рафаэлло</li>
+							<li>Брамантино</li>
+							<li>Бреа, Людовико</li>
+							<li>Бьяджо д’Антонио Туччи</li>
+							<li>Веккьетта</li>
+							<li>Андреа Верроккьо</li>
+							<li>Доменико Гирландайо</li>
+							<li>Беноццо Гоццоли</li>
+							<li>Граначчи, Франческо</li>
+							<li>Грегорио ди Чекко</li>
+							<li>Джованни да Удине</li>
+							<li>Джованни ди Паоло</li>
+							<li>Джорджоне</li>
+							<li>Парентино, Бернардо</li>
+							<li>Пезеллино</li>
+							<li>Пьетро Перуджино</li>
+							<li>Перуцци, Бальдассаре</li>
+							<li>Пизанелло</li>
+							<li>Пинтуриккьо</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/focus-visible.min.js"></script>
 	<script src="js/jquery.selectric.min.js"></script>
+	<script src="js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
