--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/selectric.css">
-	<!-- <link rel="stylesheet" href="js/jquery-ui-1.12.1.custom/jquery-ui.min.css"> -->
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="css/info.css">
@@ -258,7 +257,7 @@
 				</div>
 				<p class="paragraph gallery__paragraph text-block-reset">
 					Вам предоставляется 10 бесплатных скачиваний. Для увеличения количества скачиваний
-					<a class="paragraph__link selectable link-reset">авторизуйтесь</a>, либо воспользуйтесь лицензией.
+					<a class="paragraph__link selectable link-reset" href="#">авторизуйтесь</a>, либо воспользуйтесь лицензией.
 				</p>
 			</div>
 		</section>
